--- a/setup/setup-kubeadm/Vagrantfile
+++ b/setup/setup-kubeadm/Vagrantfile
@@ -97,9 +97,9 @@ Vagrant.configure("2") do |config|
       node.vm.provision "shell", path: "scripts/node.sh"
 
       # Only install the dashboard after provisioning the last worker (and when enabled).
-      # if i == NUM_WORKER_NODES and settings["software"]["dashboard"] and settings["software"]["dashboard"] != ""
-      #   node.vm.provision "shell", path: "scripts/dashboard.sh"
-      # end
+      if i == NUM_WORKER_NODES and settings["software"]["dashboard"] and settings["software"]["dashboard"] != ""
+        node.vm.provision "shell", path: "scripts/dashboard.sh"
+      end
     end
 
   end
