--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,35 +23,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           remote_configuration_path: "https://raw.githubusercontent.com/leoviana00/GitContributionOpenSource/main/.github/pr-title-checker-config.json"
 
-      - name: Validate PR Changed files
-        run: |
-          AUTHOR_NAME="${{ github.event.pull_request.user.login }}"
-          FILE_PATH="contribution_project.md"
-          
-          # Obtém a lista de arquivos modificados usando a CLI do GitHub
-          files_changed=$(gh api repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files --paginate | jq -r '.[].filename')
-      
-          # Lista os arquivos modificados para fins de depuração
-          echo "Changed files:"
-          echo "$files_changed"
-          
-          # Conta quantos arquivos foram modificados
-          NUM_CHANGED_FILES=$(echo "$files_changed" | wc -l)
-          
-          # Verifica se apenas o arquivo esperado foi modificado
-          if [[ "$NUM_CHANGED_FILES" -eq 1 && "$files_changed" == "$FILE_PATH" ]]; then
-              echo "PR é válido, apenas o arquivo esperado foi alterado."
-          else
-              echo "ERRO: PR inválido. Mais arquivos ou arquivos diferentes do esperado foram alterados."
-              exit 1
-          fi
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Comment PR on Success and Add Label [automerge]
         if: success()
         run: |
-          REPO_URL=${{ github.event.pull_request.head.repo.html_url }}
           AUTHOR_NAME=${{ github.event.pull_request.user.login }}
           cat <<EOT > message.txt
           Aí sim hein $AUTHOR_NAME ! Seu PR foi aprovado 🥳 
@@ -70,22 +44,15 @@ jobs:
           cat <<EOT > message.txt
           Olá $AUTHOR_NAME ! Parece que houve um problema com o seu PR 🧐 Aqui estão algumas coisas para verificar:
 
-          - Seu PR deve seguir a [convenção de commits](https://github.com/leoviana00/GitContributionOpenSource/blob/main/CONTRIBUTING.md#lista-de-tipos-de-commits-permitidos).
-          - Seu PR deve modificar **apenas** o arquivo [contribution_project.md](https://github.com/leoviana00/GitContributionOpenSource/blob/main/CONTRIBUTING.md) - dê uma olhadinha na aba **Files changed**;
-
-          Para obter mais detalhes e garantir que tudo esteja correto, confira nossas instruções nos arquivos [Guia do Contribuidor](https://github.com/leoviana00/GitTemplate/blob/main/CONTRIBUTING.md) (que, em geral, NÃO devem ser modificados, pois são arquivos genéricos de apoio).
-
-          Se o seu PR tem um objetivo diferente, não se preocupe! Ele será analisado manualmente por nossa equipe, o que pode levar um pouco mais de tempo. Pedimos paciência nesse processo 🙏
+          - Seu PR deve seguir a [convenção de commits](https://www.conventionalcommits.org/pt-br/v1.0.0-beta.4/).
 
           Agradecemos sua contribuição e compreensão 👊😉
           EOT
 
           gh pr comment ${{ github.event.pull_request.number }} --body-file=message.txt
-          gh pr edit ${{ github.event.pull_request.number }} --add-label "file not allowed"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  
   automerge:
     runs-on: ubuntu-latest
     needs: validate-and-comment
