feat(action): PR Title Check

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,66 +1,19 @@
-name: "PR Checker"
+name: 'PR Title Check'
 on:
-  pull_request_target:
+  pull_request:
     types:
       - opened
       - edited
       - synchronize
+      - labeled
+      - unlabeled
 
 jobs:
-  validate-and-comment:
-    permissions: write-all
+  check:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code from PR (Safe Checkout)
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+      - name: PR Title Verify
+        uses: satvik-s/pr-title-check
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
-
-      - name: Validate PR
-        uses: thehanimo/pr-title-checker@v1.4.1
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          remote_configuration_path: "https://raw.githubusercontent.com/leoviana00/GitContributionOpenSource/main/.github/pr-title-checker-config.json"
-
-      - name: Comment PR on Success and Add Label [automerge]
-        if: success()
-        run: |
-          AUTHOR_NAME=${{ github.event.pull_request.user.login }}
-          cat <<EOT > message.txt
-          Aí sim hein $AUTHOR_NAME ! Seu PR foi aprovado 🥳 
-          Faremos o merge aqui em breve. Muito obrigado pela contribuição 🚀
-          EOT
-
-          gh pr comment ${{ github.event.pull_request.number }} --body-file=message.txt
-          gh pr edit ${{ github.event.pull_request.number }} --add-label "automerge"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Comment PR on Failure
-        if: failure()
-        run: |
-          AUTHOR_NAME=${{ github.event.pull_request.user.login }}
-          cat <<EOT > message.txt
-          Olá $AUTHOR_NAME ! Parece que houve um problema com o seu PR 🧐 Aqui estão algumas coisas para verificar:
-
-          - Seu PR deve seguir a [convenção de commits](https://www.conventionalcommits.org/pt-br/v1.0.0-beta.4/).
-
-          Agradecemos sua contribuição e compreensão 👊😉
-          EOT
-
-          gh pr comment ${{ github.event.pull_request.number }} --body-file=message.txt
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  automerge:
-    runs-on: ubuntu-latest
-    needs: validate-and-comment
-    permissions:
-      contents: write
-    steps:
-      - id: automerge
-        name: automerge
-        uses: "pascalgn/automerge-action@v0.16.3"
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          pattern: '(fix|feat|chore|docs|style|refactor|perf|test): (?:\w+\b\W*){3,8}$'
