--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code from PR (Safe Checkout)
+        uses: actions/checkout@v3
       - name: PR Title Verify
         uses: satvik-s/pr-title-check
         with:
