--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
-name: PR has a valid Issue?
+name: PR is valid?
 
 on:
   pull_request_target:
     types: [ edited, synchronize, opened, reopened ]
 
 jobs:
-  checker-pr-has-valid-issue:
+  validate-has-valid-issue:
     permissions: write-all
     runs-on: ubuntu-latest
 
@@ -38,7 +38,7 @@ jobs:
           gh pr comment $PRNUM --body "PR is not linked to any issue, please make the corresponding changes in the body."
           gh pr edit $PRNUM --add-label "PR:No-Issue"
 
-  validate-and-comment:
+  validate-title-and-comment:
     permissions: write-all
     runs-on: ubuntu-latest
     needs: checker-pr-has-valid-issue
